Fixes proper outputting of indexDates Now only dates of satisfied indexDates are produced. Knock-on effect is, that more sub-queries need to be run, unfortunately